2019-1/231/users/4208/executions/1689_1100.log
== TEST (2019-05-01 16:49:32) 
-- CODE:
x=int(input("valor de entrada?"))

if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
	y="Invalido"
	print("Entrada",x)
elife(x=2);
-- ERROR:
File "XXXX", line 3
    if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:49:42) 
-- CODE:
x=int(input("valor de entrada?"))

if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
	y="Invalido"
	print("Entrada",x)
elife(x=2);
-- ERROR:
File "XXXX", line 3
    if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:55:28) 
-- CODE:
x=int(input("valor de entrada?"))

if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:55:43) 
-- CODE:
x=int(input("valor de entrada?"))

if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100)):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:55:58) 
-- CODE:
x=int(input("valor de entrada?"))

if	((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100)):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if	((x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:56:31) 
-- CODE:
x=int(input("valor de entrada?"))

if	(x=!2 or x=!5 or x=!10 or x=!20 or x=!50 x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if	(x=!2 or x=!5 or x=!10 or x=!20 or x=!50 x=!100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:57:17) 
-- CODE:
x=int(input("valor de entrada?"))

if(x=!2 or x=!5 or x=!10 or x=!20 or x=!50 x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if(x=!2 or x=!5 or x=!10 or x=!20 or x=!50 x=!100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:58:30) 
-- CODE:
x=int(input("valor de entrada?"))

if (x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if (x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) (x=!100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:58:46) 
-- CODE:
x=int(input("valor de entrada?"))

if (x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) or (x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if (x=!2) or (x=!5) or (x=!10) or (x=!20) or (x=!50) or (x=!100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:59:32) 
-- CODE:
x=int(input("valor de entrada?"))

if (x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if (x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:03:39) 
-- CODE:
x=int(input("valor de entrada?"))

if (x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- EXECUTION TIME:
0.160927
-- ERROR:
  File "/home/codebench/codes/1689/1100/main.py", line 3
    if (x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:05:10) 
-- CODE:
x=int(input("valor de entrada?"))

if(x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
	y="Invalido"
	print("Entrada",x)
	print("Animal",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada",x)
	print("Animal",y)
elife(x=5):
	y="Garça"
	print("Entrada",x)
	print("Animal",y)
elife(x=10):
	y="Arara"
	print("Entrada",x)
	print("Animal",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada",x)
	print("Animal",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada",x)
	print("Animal",y)
else:
	print("Entrada",x)
	print("Animal",Garoupa)
-- ERROR:
File "XXXX", line 3
    if(x=!2)or(x=!5)or(x=!10)or(x=!20)or(x=!50)or(x=!100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:13:10) 
-- CODE:
x=int(input("valor de entrada?"))

if(x=100)
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- ERROR:
File "XXXX", line 3
    if(x=100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:13:19) 
-- CODE:
x=int(input("valor de entrada?"))

if(x=100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- ERROR:
File "XXXX", line 3
    if(x=100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:13:47) 
-- CODE:
x=int(input("valor de entrada?"))

if (x=100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elife(x=50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- ERROR:
File "XXXX", line 3
    if (x=100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:16:33) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- ERROR:
File "XXXX", line 7
    elife(x==2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:16:42) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elife(x==50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- EXECUTION TIME:
0.243688
-- ERROR:
  File "/home/codebench/codes/1689/1100/main.py", line 7
    elife(x==2):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:17:08) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:"x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- ERROR:
File "XXXX", line 25
    print("Entrada:"x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:17:37) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:17:48) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- EXECUTION TIME:
0.143983
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:19:16) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:19:26) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	print("Entrada",x)
	print("Animal:",Invalido)
-- EXECUTION TIME:
0.169527
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:29) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:20:55) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- EXECUTION TIME:
0.20951
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:23:05) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:23:34) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garça"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:25:25) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:25:32) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- EXECUTION TIME:
0.22227
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:25:38) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:26:01) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:26:07) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:26:26) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:26:59) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Garoupa"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:27:07) 
-- CODE:
x=int(input("valor de entrada?"))

if (x==100):
	y="Garoupa"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==2):
	y="Tartaruga"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==5):
	y="Garca"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==10):
	y="Arara"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==20):
	y="Mico-leao-dourado"
	print("Entrada:",x)
	print("Animal:",y)
elif(x==50):
	y="Onca-pintada"
	print("Entrada:",x)
	print("Animal:",y)
else:
	y="Invalido"
	print("Entrada:",x)
	print("Animal:",y)
-- EXECUTION TIME:
0.145893
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
